--- a/style.scss
+++ b/style.scss
@@ -1,102 +1,58 @@
-.invis{
-  display:none;
-}
+@import "_variables";
+@import "_classes";
+//*********************************************
 body{
-  background-color:lightgrey;
+  background-color:$bg_back;
   margin:0;
-}
-
-header{
-  width:100%;
-  height:150px;
-  background-color:grey;
-  float:left;
-  text-align:center;
-  display:relative;
-  a{
-    color:black;
-    font-family:Arial;
-    font-weight:bold;
-    text-decoration:none;
-    display:inline-block;
-    width:200px;
-    padding: 1rem 0;
-    background-color:white;
-    box-sizing:border-box;
-    border:4px solid black;
-    position:absolute;
-    left:2%;
-    top:3rem;
-
-
-  }
-  h1{
-    line-height:150px;
-    text-align:center;
-    font-family:Arial;
-    font-size:4rem;
-    margin:0;
-    display:inline-block;
-  }
-}
-
-#rightWrapper{
-  float:left;
-  width:100%;
-}
-.smallRow{
-  display:flex;
-  margin: 50px 0;
-  justify-content: space-around;
-  a{
-    width:200;
-    height:300;
-    display:block;
-    text-align:center;
-    font-size:2rem;
-    color:white;
-    font-family:Arial;
-    font-weight:bold;
-    text-decoration:none;
-    line-height:550px;
-  }
-}
-.smallRow:nth-child(1)  a:nth-child(1){
-  background-image:url(http://www.fillmurray.com/200/300);
-}
-.smallRow:nth-child(1)  a:nth-child(2){
-  background-image:url(http://lorempixel.com/200/300/nightlife);
-}
-.smallRow:nth-child(1)  a:nth-child(3){
-  background-image:url(http://lorempixel.com/200/300/city);
-}
-.smallRow:nth-child(2)  a:nth-child(1){
-  background-image:url(http://lorempixel.com/200/300/nature);
-}
-.smallRow:nth-child(2)  a:nth-child(2){
-  background-image:url(http://lorempixel.com/200/300/sports);
-}
-.smallRow:nth-child(2)  a:nth-child(3){
-  background-image:url(http://lorempixel.com/200/300/cats);
+  color:$font_color;
+  font-family:$font_style;
 }
 nav{
   float:left;
-  width:20%;
-  height:1100px;
-  background-color:grey;
-  padding-top:12rem;;
-  a{
-    color:black;
-    font-family:Arial;
-    font-weight:bold;
-    text-decoration:none;
-    display:block;
-    width:100%;
-    padding: 1rem 0;
-    background-color:white;
-    box-sizing: border-box;
-    border:4px solid black;
-    margin: 10px 0;
+  width:15%;
+  box-sizing:border-box;
+  background-color:$bg_front;
+  padding:10em 0;
+  height:995px;
+  ul{
     text-align:center;
+    li{
+      padding:10px 0;
+      button{
+        width:90%;
+      }
+    }
+  }
+}
+header{
+  width:100%;
+  height:125px;
+  background-color:$bg_front;
+  float:left;
+  text-align:center;
+  position:relative;
+  h1{
+    font-size:4em;
+    margin:auto;
+    display:inline-block;
+    line-height:125px;
+  }
+  button{
+    @extend.styleButton;
+    position:absolute;
+    top:33%;
+    left:2%;
+    font-size:2em;
+  }
+}
+#rightWrapper{
+  float:left;
+  width:100%;
+  ul{
+    display:flex;
+    justify-content: space-around;
+    width:100%;
+    text-align:center;
+    margin:2em auto 4em auto;
   }
 }
